tests/baselines/reference/inlineSources.errors.txt
tests/cases/compiler/a.ts(2,1): error TS2304: Cannot find name 'console'.
tests/cases/compiler/b.ts(2,1): error TS2304: Cannot find name 'console'.


==== tests/cases/compiler/a.ts (1 errors) ====
    var a = 0;
    console.log(a);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    
==== tests/cases/compiler/b.ts (1 errors) ====
    var b = 0;
    console.log(b);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.